fix: nav z-index 설정

--- a/week1/shoppingList/style.css
+++ b/week1/shoppingList/style.css
@@ -65,6 +65,7 @@ nav {
   color: white;
   padding-top: 3rem;
   padding-bottom: 3rem;
+  z-index: 10;
 }
 
 nav > ul {
